--- a/.env.production
+++ b/.env.production
@@ -19,3 +19,4 @@ MODEL='gpt-3.5-turbo-0125'
 PINECONE_API_KEY='ZHWx6ozvQi2sWwuLiSJgKw==:GJ6ngbzcenLj3bH2TPX90OUigawfPIfr'
 PINECONE_ENVIRONMENT='us-west-1'
 PINECONE_INDEX_NAME='from_pinecone_ui'
+VDS_AGENT_DOMAIN='http://localhost:8000'
