--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "lucide-react": "^0.439.0",
     "next": "^14.2.3",
     "next-auth": "^4.24.5",
+    "next-http-proxy-middleware": "^1.2.6",
     "nextra": "^2.13.2",
     "nextra-theme-docs": "^2.13.2",
     "openai": "^4.28.4",
